# Frontend

./: .replit  build.sh  replit.md
Backend-Narrisia/: .replit  main.py  pyproject.toml  requirements.txt
Backend-Narrisia/app/api/: deps.py
Backend-Narrisia/app/api/endpoints/: fetch.py  orchestrate.py
Backend-Narrisia/app/core/: config.py
Backend-Narrisia/app/models/: schemas.py
Backend-Narrisia/app/services/: company_details_service.py  email_reader.py  gmail_oauth_service.py  intent_classifier.py  relevancy_scorer.py  research_engine.py
Backend-Narrisia/app/utils/: extract.py
attached_assets/: Pasted-INFO-root-Fetching-and-processing-emails-for-credibility-analysis-INFO-googleapiclient-discovery-1757248062428_1757248062430.txt
client/src/components/ui/: progress-bar.tsx
client/src/hooks/: useProgressLoader.ts
client/src/lib/: queryClient.ts
client/src/pages/: dashboard.tsx
server/: auth.ts  database.ts  index.ts  routes.ts
