
[tool.poetry]
name = "narrisia-backend"
version = "0.1.0"
description = "Narrisia AI Platform Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.5.0"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "4.1.2"
httpx = "0.25.2"
stripe = "7.8.0"
python-dotenv = "1.0.0"
requests = "2.31.0"
google-auth = "2.25.2"
google-auth-oauthlib = "1.1.0"
google-auth-httplib2 = "0.2.0"
googleapis-common-protos = "1.61.0"
email-validator = "2.1.0"
itsdangerous = "^2.1.2"
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
